Sat Jun  6 13:52:34 EST 1998  Mitch Davis  <mjd@alphalink.com.au>

	Released 1.6.2.

Sat Jun  6 13:50:43 EST 1998  Mitch Davis  <mjd@alphalink.com.au>

	* ai/aihand.c: Removed a comment left over from 1.5.1.

Sat Jun  6 13:44:59 EST 1998  Mitch Davis  <mjd@alphalink.com.au>

	* NEWS, ChangeLog, configure, configure.in, client/Freeciv.h,
	common/shared.h, data/Freeciv: Updated version numbers to 1.6.2.

Fri Jun  5 21:36:21 ??? 1998  Trent Piepho  <xyzzy@u.washington.edu>
	
	* client/mapview.c: Added Markus L. Noga's
 	<ut6e@rz.uni-karlsruhe.de> patch so cities are drawn correctly
 	with transparent flags.

Fri Jun  5 21:33:55 ??? 1998  Trent Piepho  <xyzzy@u.washington.edu>
	
	* client/mapctrl.c: Fix for minor bug in crosshairs display.

Sat Jun  6 03:23:07 EST 1998  Mitch Davis  <mjd@alphalink.com.au>

	* Makefile.in, aclocal.m4: Updated generated autoconf files to the
 	ones generated by autoconf 1.3.

	* configure, configure.in: Rearranged order to check X libs; the
 	incorrect link order was causing the client to not be able to gain
 	focus or read the keyboard.
	
1.6.1 (mjd)
- Moved the CHANGES file to ChangeLog, to comply with the GNU standard.
- Updated many version numbers to 1.6.
- Added the CREDITS file to the list of files to go into the .tar.gz.
- Updated the web page to http://freeciv.ultraviolet.org
- Made the civ and ser scripts smarter: They now look in two dirs for
  the exes to run.
- Removed a whole lot of autogenerated files which should not have been
  checked into 1.6.0.  This is what caused compilation and library
  problems for MANY people who tried 1.6.0.

1.6.0 
- *A LOT* of changes from Olav Andree Brevik. Thank you VERY much!
- Helicoptors loose 10% of hp per turn when outside city (Olav)
- 8 bit chatline support for Europeans (Olav)
- Non-ground units in cities regain hp too. (Olav)
- Flying units report moves left (Olav)
- Total moves in change production menu (Olav)
- Railroads now built into city tiles, even when taking a city from an